[package]

name = "lawicel"
license = "MIT/Apache-2.0"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
categories = ["api-bindings"]
description = "Ergonomic Rust API to interact with LAWICEL serial CAN-bus interfaces"
homepage = "https://github.com/tsabelmann/lawicel-rs"
keywords = ["lawicel", "can", "interface"]
repository = "https://github.com/tsabelmann/lawicel-rs"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "4.3.0", default-features = false}
